# rle-array

./: .buildinfo  .editorconfig  .flake8  .gitignore  CHANGES.rst  CONTRIBUTING.md  LICENSE.txt  README.rst  asv.conf.json  changes.html  codecov.yml  genindex.html  index.html  mypy.ini  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  test-requirements.txt
.github/workflows/: ci.yml
_rst/: modules.html  rle_array.array.html  rle_array.autoconversion.html  rle_array.dtype.html  rle_array.html  rle_array.testing.html  rle_array.types.html
_sources/_rst/: modules.rst.txt  rle_array.array.rst.txt  rle_array.autoconversion.rst.txt  rle_array.dtype.rst.txt  rle_array.rst.txt  rle_array.testing.rst.txt  rle_array.types.rst.txt
asv_bench/: asv.conf.json
asv_bench/benchmarks/: benchmarks.py
benchmarks/: benchmarks.py
docs/: conf.py  index.rst
docs/sphinxext/: ignore_missing_refs.py
rle_array/: __init__.py  _algorithms.py  _operators.py  _slicing.py  array.py  autoconversion.py  dtype.py  testing.py  types.py
scripts/: bootstrap_conda.sh  fmt.sh  test.sh
tests/: test_algorithms.py  test_astype.py  test_autoconversion.py  test_builtins.py  test_constructors.py  test_dtype.py  test_fastpath.py  test_indexing.py  test_misc_operations.py  test_operators.py  test_pandas.py  test_reduce.py  test_regressions.py  test_shift.py  test_slicing.py  test_testing.py  test_ufunc.py  test_view.py
